Fixed overflow hidden error

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #000;
-  overflow: hidden;
 }
 
 .primary-text {
